--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       <h2>📚 PLANNER</h2>
       <div class="header-buttons">
         <span class="loading" id="loading"></span>
-        <button id="view-toggle">⏰ TIME TABLE</button>
+        <button id="view-toggle">TIME TABLE</button>
       </div>
     </div>
 
